<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- small bar -->
    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_activity_bottom_bar"
        android:visibility="visible">

        <ImageView
            android:id="@+id/now_playing_imageview"
            android:layout_width="@dimen/home_activity_bottom_bar"
            android:layout_height="@dimen/home_activity_bottom_bar"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_1" />

        <music.dexterous.com.dexterousmusic.customeviews.widget.FontTextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/now_playing_imageview"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="Playing"
            android:textColor="@android:color/holo_purple"
            android:textSize="@dimen/text_extra_small" />

        <music.dexterous.com.dexterousmusic.customeviews.widget.FontTextView
            android:id="@+id/now_playing_song_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status"
            android:layout_toEndOf="@id/now_playing_imageview"
            android:layout_toStartOf="@+id/toggle_upper"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_large"
            app:fontName="Calibri-light.ttf"
            tools:text="Song Name" />

        <ImageView
            android:id="@+id/toggle_upper"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:src="@drawable/ic_play_vector" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/now_plaiing_innerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_1" />

        <music.dexterous.com.dexterousmusic.customeviews.widget.FontTextView
            android:id="@+id/song_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/album_art"
            android:gravity="center"
            android:lines="1"
            android:padding="8dp"
            android:text="01 - Sau Tarah Ke - Dishoom [DJMaza.Cool]"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_extra_large" />

        <LinearLayout
            android:id="@+id/song_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_tittle"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <music.dexterous.com.dexterousmusic.customeviews.widget.FontTextView
                android:id="@+id/song_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:padding="8dp"
                android:text="Artist Name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />

            <music.dexterous.com.dexterousmusic.customeviews.widget.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:padding="8dp"
                android:text="|"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />

            <music.dexterous.com.dexterousmusic.customeviews.widget.FontTextView
                android:id="@+id/song_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:padding="8dp"
                android:text="Movie Name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <include
            layout="@layout/control_music_widget_upper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/control_music_widget_id"
            android:layout_below="@id/song_details" />

        <include
            android:id="@+id/control_music_widget_id"
            layout="@layout/control_music_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/control_music_widget_lower_id" />


        <include
            android:id="@+id/control_music_widget_lower_id"
            layout="@layout/control_music_widget_lower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</RelativeLayout>
