<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:paddingStart= "@dimen/activity_horizontal_margin"
    android:paddingEnd= "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    app:layout_behavior = "@string/appbar_scrolling_view_behavior"
    tools:context = ".activity.MainActivity"
    tools:showIn = "@layout/activity_main"
    >

    <Button
        android:id = "@+id/give_permission"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical = "true"
        android:text = "Give Permission"
        />

</LinearLayout >