<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "wrap_content"
    android:gravity = "center"
    android:weightSum = "11"
    >

    <ImageView
        android:id = "@+id/widget_repeate"
        android:layout_width = "@dimen/widget_element_size_extra_small"
        android:layout_height = "@dimen/widget_element_size_extra_small"
        android:layout_weight = "1"
        tools:src = "@drawable/ic_repeat_all_vector"
        />

    <ImageView
        android:id = "@+id/widget_vol_down"
        android:layout_width = "@dimen/widget_element_size_extra_small"
        android:layout_height = "@dimen/widget_element_size_extra_small"
        android:layout_weight = "1"
        android:src = "@drawable/ic_volume_mute_vector"
        />


    <SeekBar
        android:layout_width = "@dimen/widget_element_size"
        android:layout_height = "@dimen/widget_element_size"
        android:layout_weight = "7"
        />

    <ImageView
        android:id = "@+id/widget_vol_inc"
        android:layout_width = "@dimen/widget_element_size_extra_small"
        android:layout_height = "@dimen/widget_element_size_extra_small"
        android:layout_weight = "1"
        android:src = "@drawable/ic_volume_up_vector"
        />

    <ImageView
        android:id = "@+id/widget_shuffel"
        android:layout_width = "@dimen/widget_element_size_extra_small"
        android:layout_height = "@dimen/widget_element_size_extra_small"
        android:layout_weight = "1"
        android:src = "@drawable/ic_shuffle_on_vector"
        />

</LinearLayout >