<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    >

    <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        tools:context = ".activity.SongListActivity"
        >

        <android.support.v7.widget.RecyclerView
            android:id = "@+id/my_recycler_view"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:scrollbars = "vertical"
            />

        <com.viethoa.RecyclerViewFastScroller
            android:id = "@+id/fast_scroller"
            android:layout_width = "wrap_content"
            android:layout_height = "match_parent"
            android:layout_alignParentEnd = "true"
            android:layout_alignParentRight = "true"
            />

    </RelativeLayout >
</LinearLayout >